testdata/baselines/reference/submodule/conformance/noAssertForUnparseableTypedefs.errors.txt
bug26693.js(1,15): error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
bug26693.js(2,22): error TS2307: Cannot find module 'nope' or its corresponding type declarations.


==== bug26693.js (2 errors) ====
    /** @typedef {module:locale} hi */
                  ~~~~~~
!!! error TS2580: Cannot find name 'module'. Do you need to install type definitions for node? Try `npm i --save-dev @types/node`.
    import { nope } from 'nope';
                         ~~~~~~
!!! error TS2307: Cannot find module 'nope' or its corresponding type declarations.
    